# RTSpatial

./: CMakeLists.txt  README.md  librtspatial-config.in.cmake  rtspatial-config-version.in.cmake  rtspatial-config.in.cmake
.github/workflows/: ci.yml
cmake/: FindHdrHistogram.cmake  nvcuda_compile_module.cmake  rtspatial_compile_shaders.cmake
dataset/: gen_data.sh
dataset/box/: gaussian_1000.wkt  uniform_1000.wkt
dataset/point/: gaussian_1000.wkt  uniform_1000.wkt
examples/: CMakeLists.txt  benchmark.h  expr.cu  flags.cpp  flags.h  spatial_index.cu  wkt_loader.h
examples/shaders/: shaders_hit.cu
expr/: run_synthetic.sh
include/rtspatial/: rtspatial.h  spatial_index.cuh
include/rtspatial/default_handlers/: collecting_handlers.h  counting_handlers.h
include/rtspatial/details/: config.h  launch_parameters.h  ray_params.h  reusable_buffer.h  ring_buffer.h  rt_engine.h  sampler.h  sbt_record.h
include/rtspatial/geom/: envelope.cuh  line.cuh  point.cuh  predicates.h
include/rtspatial/utils/: array_view.h  bitset.h  event_pool.h  exception.h  helpers.h  queue.h  shared_value.h  stopwatch.h  stream.h  type_traits.h  util.h
src/: CMakeLists.txt  benchmark.h  flags.cpp  flags.h  rt_engine.cu  spatial_index.cu
src/shaders/: shaders_contains_envelope_query_2d.cu  shaders_contains_point_query_2d.cu  shaders_contains_point_query_2d_triangle.cu  shaders_intersects_envelope_query_2d.cu  shaders_intersects_envelope_query_2d_new.cu  shaders_intersects_envelope_query_2d_pipeline.cu  shaders_intersects_line_query_2d.cu
src/tests/: rtspatial_tests.cu  test_envelope_queries.h  test_point_queries.h
test/: CMakeLists.txt  rtspatial_tests.cu  test_commons.h  test_envelope_queries.h  test_line_queries.h  test_point_queries.h
